; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-ipc-heavy-traffic-deadlock-bug.c_read_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-ipc-heavy-traffic-deadlock-bug.c_read_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64* }

@bytes_read = common dso_local global i64 0, align 8
@BUFFER_CONTENT = common dso_local global i64 0, align 8
@XFER_SIZE = common dso_local global i64 0, align 8
@shutdown_req = common dso_local global i32 0, align 4
@shutdown_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, %struct.TYPE_3__*)* @read_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_cb(i32* %0, i64 %1, %struct.TYPE_3__* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.TYPE_3__* %2, %struct.TYPE_3__** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp sge i64 %9, 0
  %11 = zext i1 %10 to i32
  %12 = call i32 @ASSERT(i32 %11)
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @bytes_read, align 8
  %15 = add nsw i64 %14, %13
  store i64 %15, i64* @bytes_read, align 8
  store i64 0, i64* %7, align 8
  br label %16

16:                                               ; preds = %31, %3
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* %5, align 8
  %19 = icmp slt i64 %17, %18
  br i1 %19, label %20, label %34

20:                                               ; preds = %16
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64*, i64** %22, align 8
  %24 = load i64, i64* %7, align 8
  %25 = getelementptr inbounds i64, i64* %23, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @BUFFER_CONTENT, align 8
  %28 = icmp eq i64 %26, %27
  %29 = zext i1 %28 to i32
  %30 = call i32 @ASSERT(i32 %29)
  br label %31

31:                                               ; preds = %20
  %32 = load i64, i64* %7, align 8
  %33 = add nsw i64 %32, 1
  store i64 %33, i64* %7, align 8
  br label %16

34:                                               ; preds = %16
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 0
  %37 = load i64*, i64** %36, align 8
  %38 = call i32 @free(i64* %37)
  %39 = load i64, i64* @bytes_read, align 8
  %40 = load i64, i64* @XFER_SIZE, align 8
  %41 = icmp sge i64 %39, %40
  br i1 %41, label %42, label %56

42:                                               ; preds = %34
  %43 = load i32*, i32** %4, align 8
  %44 = call i32 @uv_read_stop(i32* %43)
  store i32 %44, i32* %8, align 4
  %45 = load i32, i32* %8, align 4
  %46 = icmp eq i32 %45, 0
  %47 = zext i1 %46 to i32
  %48 = call i32 @ASSERT(i32 %47)
  %49 = load i32*, i32** %4, align 8
  %50 = load i32, i32* @shutdown_cb, align 4
  %51 = call i32 @uv_shutdown(i32* @shutdown_req, i32* %49, i32 %50)
  store i32 %51, i32* %8, align 4
  %52 = load i32, i32* %8, align 4
  %53 = icmp eq i32 %52, 0
  %54 = zext i1 %53 to i32
  %55 = call i32 @ASSERT(i32 %54)
  br label %56

56:                                               ; preds = %42, %34
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @free(i64*) #1

declare dso_local i32 @uv_read_stop(i32*) #1

declare dso_local i32 @uv_shutdown(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
